Rename track event to log

--- a/src/sib-app.html
+++ b/src/sib-app.html
@@ -35,9 +35,9 @@
     <sib-app-state list="{{list}}" mode="just-one">
     </sib-app-state>
 
-    <sib-panel on-track="track" up="[[todaysTime]]"></sib-panel>
+    <sib-panel on-log="track" up="[[todaysTime]]"></sib-panel>
 
-    <sib-week list="[[list]]"></sib-week>
+    <sib-week list="[[listFake]]"></sib-week>
 
   </template>
 
