--- a/src/sib-sparkline.html
+++ b/src/sib-sparkline.html
@@ -62,6 +62,12 @@
         stroke-opacity: 0.3;
       }
 
+      svg line {
+        stroke: white;
+        stroke-width: 1;
+        stroke-opacity: 0.5;
+      }
+
       /*svg text {
         @apply(--paper-font-common-base);
         font-size: 9px;
@@ -109,6 +115,7 @@
      
         this._renderPath(svg);
         this._renderCircles(svg);
+        this._renderLines(svg);
       },
 
       _createElement: function(name) {
@@ -140,6 +147,15 @@
           //   svg.appendChild(text);
           // }
         }
+      },
+
+      _renderLines: function(svg) {
+          var line = this._createElement('line');
+          line.setAttribute('x1', 0);
+          line.setAttribute('x2', 200);
+          line.setAttribute('y1', 5);
+          line.setAttribute('y2', 5);
+          svg.appendChild(line);
       },
 
       _getPath: function() {
