--- a/src/sib-sparkline.html
+++ b/src/sib-sparkline.html
@@ -78,16 +78,14 @@
         stop-color: white;
       }
 
-      /*svg text {
+      svg text {
         @apply(--paper-font-common-base);
-        font-size: 9px;
-        font-weight: 200;
-        stroke-opacity: 0.2;
-        stroke: white;
+        font-size: 8px;
+        font-weight: 400;
         fill: white;
-        fill-opacity: 0.2;
-        text-anchor: middle;
-      }*/
+        fill-opacity: 0.7;
+        text-anchor: end;
+      }
     </style>
 
     <svg id="svg"
@@ -110,9 +108,10 @@
       <circle cx$="[[c(coords.*, 5, 'x')]]" cy$="[[c(coords.*, 5, 'y')]]"></circle>
       <circle cx$="[[c(coords.*, 6, 'x')]]" cy$="[[c(coords.*, 6, 'y')]]"></circle>
 
-      <line x1="-5" x2="205" y1="3" y2="3"></line>
-      <line x1="-5" x2="205" y1="98" y2="98"></line>
-      <!--<text x="5" y="205">10:20</text>-->
+      <line x1="-5" x2="205" y1="9" y2="9"></line>
+      <line x1="-5" x2="205" y1="91" y2="91"></line>
+      <text x="197" y="7">08:55</text>
+      <text x="197" y="100">07:10</text>
     </svg>
 
     <div class="axis">      
