--- a/src/sib-week.html
+++ b/src/sib-week.html
@@ -7,7 +7,7 @@
 <link rel="import" href="sib-icons.html">
 <link rel="import" href="sib-day-tile.html">
 <link rel="import" href="sib-today-tile.html">
-<link rel="import" href="sib-sparkline.html">
+<link rel="import" href="sib-sparkline-static.html">
 
 <dom-module id="sib-week">
   <template>
