Change coordinate system

--- a/src/sib-app.html
+++ b/src/sib-app.html
@@ -35,7 +35,7 @@
     <sib-app-state list="{{list}}" mode="just-one">
     </sib-app-state>
 
-    <sib-panel on-log="track" up="[[todaysTime]]"></sib-panel>
+    <!--<sib-panel on-log="track" up="[[todaysTime]]"></sib-panel>-->
 
     <sib-week list="[[listFake]]"></sib-week>
 
