--- a/src/sib-sparkline-static.html
+++ b/src/sib-sparkline-static.html
@@ -41,24 +41,25 @@
 
       svg {
         width: 100vw;
-        height: 50vw;
-        display: block;
+        height: 100vh;
+        position: fixed;
+        bottom: 0;
       }
 
       svg path {
         stroke-opacity: 0.7;
         stroke: white;
         fill: var(--primary-color);
-        stroke-width: 2;
+        stroke-width: 1;
         stroke-linejoin: round;
       }
 
       svg circle {
-        r: 2;
+        r: 1;
         fill: white;
         fill-opacity: 0.7;
         stroke: white;
-        stroke-width: 5;
+        stroke-width: 2.5;
         stroke-opacity: 0.3;
       }
 
@@ -92,10 +93,9 @@
         fill-opacity: 0.5;
       }
     </style>
-
     <svg id="svg"
       xmlns="http://www.w3.org/2000/svg" version="1.1" 
-      viewBox="0 0 200 100" on-tap="tap">
+      viewBox="0 -1 100 1" preserveAspectRatio="xMidYMax" on-tap="tap">
       <defs>
         <linearGradient id="grad" gradientUnits="userSpaceOnUse">
           <stop class="start" offset="50%"/>
