--- a/src/sib-sparkline-static.html
+++ b/src/sib-sparkline-static.html
@@ -66,7 +66,7 @@
       svg line {
         --stroke: url(#grad);
         stroke: white;
-        stroke-width: 1;
+        stroke-width: 0.4;
         stroke-opacity: 0.7;
       }
 
@@ -82,7 +82,7 @@
 
       svg text {
         @apply(--paper-font-common-base);
-        font-size: 8px;
+        font-size: 5px;
         font-weight: 400;
         fill: white;
         fill-opacity: 0.8;
@@ -112,9 +112,13 @@
       <circle cx="78" cy="-60"></circle>
       <circle cx="92" cy="-50"></circle>
 
-      <line x1="72" x2="72" y1="84" y2="31"></line>
-      <text x="74" y="37" dy="0">07:10</text>
-      <text x="74" y="45" dy="0" class="mute">wed</text>
+      <line x1="36" x2="36" y1="-15" y2="-100"></line>
+      <text x="36" y="-100" dx="1" dy="3">07:10</text>
+      <text x="36" y="-100" dx="1" dy="8" class="mute">wed</text>
+
+      <line x1="64" x2="64" y1="-85" y2="-110"></line>
+      <text x="64" y="-110" dx="1" dy="3">08:40</text>
+      <text x="64" y="-110" dx="1" dy="8" class="mute">fri</text>
 
 <!--      
       <text x$="[[xmax(coords.*)]]" y$="[[ymax(coords.*)]]" dy="-9">08:55</text>
