--- a/src/sib-sparkline-static.html
+++ b/src/sib-sparkline-static.html
@@ -101,8 +101,7 @@
           <stop class="start" offset="50%"/>
           <stop class="end" offset="100%"/>
         </linearGradient>
-      </defs>
-      
+      </defs>      
 
       <path d$="[[path]]"></path>
 
@@ -114,19 +113,14 @@
       <circle cx$="[[c(cs.*, 5, 'x')]]" cy$="[[c(cs.*, 5, 'y')]]"></circle>
       <circle cx$="[[c(cs.*, 6, 'x')]]" cy$="[[c(cs.*, 6, 'y')]]"></circle>
 
-      <line x1="36" x2="36" y1="-15" y2="-100"></line>
-      <text x="36" y="-100" dx="1" dy="3">07:10</text>
-      <text x="36" y="-100" dx="1" dy="8" class="mute">wed</text>
+      <line x1$="[[xmin]]" x2$="[[xmin]]" y1$="[[ymin]]" y2="-100"></line>
+      <text x$="[[xmin]]" y="-100" dx="1" dy="3">07:10</text>
+      <text x$="[[xmin]]" y="-100" dx="1" dy="8" class="mute">wed</text>
 
-      <line x1="64" x2="64" y1="-85" y2="-110"></line>
-      <text x="64" y="-110" dx="1" dy="3">08:40</text>
-      <text x="64" y="-110" dx="1" dy="8" class="mute">fri</text>
+      <line x1$="[[xmax]]" x2$="[[xmax]]" y1$="[[ymax]]" y2="-110"></line>
+      <text x$="[[xmax]]" y="-110" dx="1" dy="3">08:40</text>
+      <text x$="[[xmax]]" y="-110" dx="1" dy="8" class="mute">fri</text>
 
-<!--      
-      <text x$="[[xmax(coords.*)]]" y$="[[ymax(coords.*)]]" dy="-9">08:55</text>
-      <text x$="[[xmin(coords.*)]]" y$="[[ymin(coords.*)]]" dy="-30">07:10</text>
-      -->
-      <!--<line x1="72" x2="82" y1="60" y2="60"></line>-->
     </svg>
 
     <div class="axis">      
@@ -152,8 +146,8 @@
       ],
 
       calc: function () {
-        var b = 16;
-        var k = 60;
+        var b = 20;
+        var k = 45;
 
         var self = this;
 
@@ -165,6 +159,12 @@
         });
 
         self.path = self.getPath(self.cs);
+
+        self.xmin = self.cs[2].x;
+        self.ymin = self.cs[2].y;
+
+        self.xmax = self.cs[4].x;
+        self.ymax = self.cs[4].y;
       },
       
       c: function(change, index, path) {
