--- a/src/sib-today.html
+++ b/src/sib-today.html
@@ -19,20 +19,21 @@
       }
 
       paper-button {
-        background: rgba(255,255,255, 0.8); 
+        background: rgba(255,255,255, 0.9); 
         width: 70vw; 
         color: var(--primary-color);
       }
 
       .text {
         --@apply(--paper-font-common-base);
-        font: san-serif !important;
+        font-family: sans-serif;
       }
 
       .text.time { 
         width: 70vw; 
         font-weight: 400;
-        opacity: 0.8;
+        opacity: 0.9;
+        line-height: 0.85em;
       }
 
       .text.day { 
@@ -45,7 +46,7 @@
     
     <div class="container">
         <full-width-text class="text time">08:41:20</full-width-text>
-        <full-width-text class="text day">Wednesday 25, October</full-width-text>
+        <full-width-text class="text day" log>Wednesday 25, October</full-width-text>
         <paper-button raised>
             I'm up!
         </paper-button>
