Make today text full width

--- a/src/sib-today.html
+++ b/src/sib-today.html
@@ -20,8 +20,11 @@
 
       paper-button {
         background: rgba(255,255,255, 0.9); 
-        width: 70vw; 
         color: var(--primary-color);
+        width: 70vw; 
+        height: 50px;
+        font-size: 1.5em;
+        margin-top: 5px;
       }
 
       .text {
@@ -46,7 +49,7 @@
     
     <div class="container">
         <full-width-text class="text time">08:41:20</full-width-text>
-        <full-width-text class="text day" log>Wednesday 25, October</full-width-text>
+        <full-width-text class="text day" log>Wednesday, October 26</full-width-text>
         <paper-button raised>
             I'm up!
         </paper-button>
